syntax = "proto3";

package Nebula.Protocols;

message ComponentId
{
  string Name = 1;
}